@@ -8,7 +8,7 @@ Authors@R: c(person(given = "Daniel", family = "Fischer", role = c("aut","cre"),
 Author: Daniel Fischer [aut, cre], Anu Sironen [aut]
 Maintainer: Daniel Fischer <daniel.fischer@luke.fi>
 Depends: R (>= 3.2)
-Imports: httr (>= 0.2), XML (>= 3.98-1.1), stringr (>= 0.6.2), MASS (>= 7.3-31), R.utils (>= 1.32.4), data.table, seqinr, Biostrings, GenomicRanges, bamsignals, IRanges
+Imports: httr (>= 0.2), XML (>= 3.98-1.1), stringr (>= 0.6.2), MASS (>= 7.3-31), R.utils (>= 1.32.4), data.table, seqinr, Biostrings, GenomicRanges, bamsignals, IRanges, Rsamtools
 Suggests: knitr, rmarkdown
 Description: Cross-species identification of novel gene candidates using the NCBI web service is provided. Further, sets of miRNA target genes can be identified by using the targetscan.org API.
 VignetteBuilder: knitr 
