@@ -32,8 +32,10 @@ getFastaFromBed <- function(bed, species=NULL, release = "84", fastaFolder=NULL,
     .file = file.path(fastaFolder, fileName)
     if(!file.exists(.file)) download.file(paste(ensemblURL,fileName,sep=""), .file)
     if(verbose) cat("Read original fasta file:\n   ", .file ,"\n")
-    seqSpecies <- read.fasta(.file,seqtype="DNA")
-    novelFA[bedRun] <- paste(seqSpecies[[1]][bed$Start[bedRun]:bed$End[bedRun]],collapse="")
+    # seqSpecies <- read.fasta(.file,seqtype="DNA")
+    # novelFA[bedRun] <- paste(seqSpecies[[1]][bed$Start[bedRun]:bed$End[bedRun]],collapse="")
+    tmp <- scanFa("K:/Ovis_aries.Oar_v4.0.dna.chromosome.1.fa.gz")
+    novelFA[bedRun] <- as.character(subseq(tmp,bed$Start[bedRun],bed$End[bedRun]))
   }
   names(novelFA) <- paste(">",bed[,1],":",bed[,2],"-",bed[,3],sep="")
   if(!is.null(export)){
